plugins {
    id "com.github.spotbugs" version "4.7.0" apply false
    id "org.owasp.dependencycheck" version "6.1.5" apply false
}

allprojects {
    group = 'uk.co.autotrader'
    version = "1.0.0"
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'jacoco'
    apply plugin: 'checkstyle'
    apply plugin: 'maven-publish'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'org.owasp.dependencycheck'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'junit:junit:4.12',
                'com.google.guava:guava:18.0',
                'org.mockito:mockito-core:3.6.28',
                'org.assertj:assertj-core:3.11.1',
                'org.apache.commons:commons-lang3:3.4'
    }

    jacocoTestCoverageVerification {
        violationRules {
            rule {
                element = 'CLASS'

                limit {
                    counter = 'LINE'
                    value = 'COVEREDRATIO'
                    minimum = 1
                }

                limit {
                    counter = 'BRANCH'
                    value = 'COVEREDRATIO'
                    minimum = 1
                }
            }
        }
    }

    spotbugs {
        toolVersion = '4.2.3'
    }

    build {
        dependsOn('jacocoTestCoverageVerification')
    }

    checkstyle {
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        toolVersion = "8.41.1"
    }

    jar {
        from('../LICENSE') {
            into('META-INF/')
        }
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        archiveClassifier = 'sources'
        from sourceSets.main.allSource
    }

    task javadocJar(type: Jar, dependsOn: javadoc) {
        archiveClassifier = 'javadoc'
        from javadoc.destinationDir
    }

    artifacts {
        archives sourcesJar
        archives javadocJar
    }

    publishing {
        publications {
            MavenPublication(MavenPublication) {
                from components.java
                artifact sourcesJar
                artifact javadocJar
            }
        }
    }
}

project(':traverson4j-hc5') {
    dependencies {
        implementation project(':traverson4j-core')
    }
}

project(':traverson4j-jackson2') {
    dependencies {
        implementation project(':traverson4j-core')
    }
}
